--- a/AdvanceSelenium/test-output/old/Suite/methods-not-run.html
+++ b/AdvanceSelenium/test-output/old/Suite/methods-not-run.html
@@ -1,4 +1,6 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>com.vtiger.crm.baseclassutility.BaseClassTest.configAS</td></tr>
 <tr><td>com.vtiger.crm.baseclassutility.BaseClassTest.configBS</td></tr>
+<tr><td>com.vtiger.crm.contacttest.Working_with_ContactModuleTest.createContactTest</td></tr>
+<tr><td>com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest.createOrgTest</td></tr>
 </table>
