--- a/AdvanceSelenium/test-output/old/Suite/methods.html
+++ b/AdvanceSelenium/test-output/old/Suite/methods.html
@@ -1,52 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 17:00:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">&gt;&gt;configBM</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:41:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">&lt;&lt;configAM</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 17:00:13</td>   <td>11951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">&lt;&lt;configAM</td> 
+<tr bgcolor="79ec67">  <td>24/09/05 16:42:14</td>   <td>22217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_OrganizationModuleTest.createOrgWithNumber()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@6069db50]">createOrgWithNumber</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:42:23</td>   <td>31482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@6069db50]">&lt;&lt;configAM</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:59:29</td>   <td>-31533</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAC()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&lt;&lt;configAC</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:41:54</td>   <td>2663</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBC()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@6069db50]">&gt;&gt;configBC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 17:00:16</td>   <td>14660</td> <td title="&lt;&lt;BaseClassTest.configAS()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&lt;&lt;configAS</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:42:11</td>   <td>19662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@6069db50]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:42:26</td>   <td>34179</td> <td title="&lt;&lt;BaseClassTest.configAS()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">&lt;&lt;configAS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>24/08/29 16:59:08</td>   <td>-52959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_ContactModuleTest.createContactwithOrgTest()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">createContactwithOrgTest</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:42:25</td>   <td>32830</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAC()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@6069db50]">&lt;&lt;configAC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>24/09/05 16:42:00</td>   <td>8555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_OrganizationModuleTest.createOrgWithIndustryAndType()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@6069db50]">createOrgWithIndustryAndType</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>24/08/29 16:58:55</td>   <td>-66025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_ContactModuleTest.createContactwithDate()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">createContactwithDate</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:59:28</td>   <td>-32974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:59:05</td>   <td>-55464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="72f59f">  <td>24/08/29 17:00:03</td>   <td>2577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_OrganizationModuleTest.createOrgWithNumber()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">createOrgWithNumber</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 17:00:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:58:35</td>   <td>-85915</td> <td title="&gt;&gt;BaseClassTest.configBS()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&gt;&gt;configBS</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:41:14</td>   <td>-38220</td> <td title="&gt;&gt;BaseClassTest.configBS()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">&gt;&gt;configBS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 17:00:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">&gt;&gt;configBM</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:41:30</td>   <td>-22070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">&gt;&gt;configBM</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:58:35</td>   <td>-85679</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBC()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&gt;&gt;configBC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>24/08/29 16:58:41</td>   <td>-80087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_ContactModuleTest.createContactTest()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">createContactTest</td> 
+<tr bgcolor="7d9dab">  <td>24/09/05 16:41:18</td>   <td>-34047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_ContactModuleTest.createContactwithDate()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">createContactwithDate</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:59:28</td>   <td>-32974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&lt;&lt;configAM</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:41:30</td>   <td>-22070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">&gt;&gt;configBM</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:59:31</td>   <td>-30123</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBC()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">&gt;&gt;configBC</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:41:53</td>   <td>1375</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAC()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">&lt;&lt;configAC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:59:05</td>   <td>-55464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&gt;&gt;configBM</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:42:23</td>   <td>31482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@6069db50]">&lt;&lt;configAM</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 17:00:13</td>   <td>11951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:59:28</td>   <td>-32974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 17:00:13</td>   <td>11951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="72f59f">  <td>24/08/29 16:59:36</td>   <td>-25147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_OrganizationModuleTest.createOrgTest()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">createOrgTest</td> 
+<tr bgcolor="7d9dab">  <td>24/09/05 16:41:32</td>   <td>-19555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_ContactModuleTest.createContactwithOrgTest()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">createContactwithOrgTest</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 17:00:14</td>   <td>13348</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAC()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">&lt;&lt;configAC</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:42:11</td>   <td>19662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@6069db50]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:41:14</td>   <td>-38055</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBC()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">&gt;&gt;configBC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="ae8fd0">  <td>24/08/29 16:59:05</td>   <td>-55464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClassTest.configBM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@36bc55de]">&gt;&gt;configBM</td> 
+<tr bgcolor="dc8ecb">  <td>24/09/05 16:41:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClassTest.configAM()[pri:0, instance:com.vtiger.crm.contacttest.Working_with_ContactModuleTest@5c33f1a9]">&lt;&lt;configAM</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="72f59f">  <td>24/08/29 16:59:49</td>   <td>-11371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Working_with_OrganizationModuleTest.createOrgWithIndustryAndType()[pri:0, instance:com.vtiger.crm.orgtest.Working_with_OrganizationModuleTest@74fe5c40]">createOrgWithIndustryAndType</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
 </table>
